# quaint_dash

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yaml
data/: persistent_db.db.wal
db/: queries.py  schema.sql
docs/adr/: adr_ph0.md  adr_ph1.md  adr_ph2.md
docs/classes/plantuml-code/: app_ph1.puml  formatters_ph1.puml
docs/erd/mermaid-code/: erd_ph1.mmd  erd_ph2.mmd
docs/phase 1/: diagram.puml
docs/phase_plan/: TODO.md
docs/usage/cmds/: dashboard_cmds.md  portfolio_cmds.md
src/dashboard/: __main__.py  cli.py  csv_import.py  models.py
src/dashboard/db/: db_conn.py  queries.py  schema.sql
src/dashboard/models/: cli_view.py  domain.py  storage.py
src/dashboard/services/: import_csv.py  importer.py  table_formatter.py
tests/: batch_txn.csv  cli_is_alive.py  single_txn.csv  test_cli_cmds.py  test_cli_isAlive.py  test_csv_import.py  test_importer.py
tests/data/: sample.csv  single_txn.csv
tests/tmp/: test_db.db  test_import_mul_port_batch.csv  test_import_one_batch.csv
