[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dashboard"
version = "0.1.0"
description = "TUI based portfolio management dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  {name = "Connor Proulx", email = "proolux@telus.net"}
]

dependencies = [
  "duckdb>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
dashboard = "dashboard.cli:main"

[project.urls]
Home-page = "https://github.com/greadee/quaint_dash"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]


